--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.springboot.app</groupId>
 	<artifactId>projectAA17</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHO</version>
 	<name>projectAA17</name>
 	<description>Demo project for Spring Boot</description>
 
